Added h2 from github
Added H2 from Git  Hub

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
-  <body><h1>Git is awesome</h1></body>
+  <body><h1>Git is awesome</h1>
+    <h2> Added H2 from GitHUB </h2>
+  </body>
   <p>
     Added a new Paragraph
   </p>
+  
 </html>
