Added h3 from github feature2 brach

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body><h1>Git is awesome</h1>
     <h2> Added H2 from GitHUB </h2>
+      <h2> Added H3 from GitHUB from FEATURE2 BRANCH </h2>
   </body>
   <p>
     Added a new Paragraph
