added a heading in index html file from feature-1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body><h1>Git is awesome</h1>
     <h2> Added H2 from GitHUB </h2>
       <h2> Added H3 from GitHUB from FEATURE2 BRANCH </h2>
+	    <h2> Added H4 from GitHUB from FEATURE1 BRANCH </h2>
   </body>
   <p>
     Added a new Paragraph
