pushing to github. the changes will be merged from github to master

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <h2> Added H2 from GitHUB </h2>
       <h2> Added H3 from GitHUB from FEATURE2 BRANCH </h2>
 	    <h2> Added H4 from GitHUB from FEATURE1 BRANCH </h2>
+		 <h4> Added H4  FEATURE1 BRANCH and pushed to Github</h4>
   </body>
   <p>
     Added a new Paragraph
 	Added a new line from feature-1 branch
+	New line added in feature 1 and pushed GitHub
   </p>
   
 </html>
