added form element by CherryMoksha

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 	Added a new line from feature-1 branch
 	New line added in feature 1 and pushed GitHub
   </p>
+  <form action="created by CherryMoksha">
+  </form>
   
 </html>
