Admin direct commit in github

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		  <h4> Added H5  Master branch BulCherryGit 12thAug</h4>
 		  
 		    <h4> Satyam added this</h4>
+	   <h4> Admin direct commit in github added this</h4>
   </body>
   <p>
     Added a new Paragraph
