satyam conflict changes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		  
 		    <h4> Satyam added this</h4>
 	   <h4> Admin direct commit in github added this</h4>
+	    <h4> Sayma commit in github added this</h4>
   </body>
   <p>
     Added a new Paragraph
